Footer fix on small devices.

--- a/assets/scss/responsive/_max-900.scss
+++ b/assets/scss/responsive/_max-900.scss
@@ -63,8 +63,5 @@
     #footer--copyright {
       text-align: center;
     }
-    #footer--links {
-      display: block;
-    }
   }
 }
